Replaced ':' with '/' as the new command symbol in the man page

--- a/suckless/sic/sic.1
+++ b/suckless/sic/sic.1
@@ -36,19 +36,19 @@ Specifies the PASS connection password
 Prints version information to stderr, then exits
 .SH COMMANDS
 .TP
-.BI :j " #channel"
+.BI /j " #channel"
 Join a channel
 .TP
-.BI :l " #channel"
+.BI /l " #channel"
 Leave a channel
 .TP
-.BI :m " #channel/user message"
+.BI /m " #channel/user message"
 Send a message to channel or user
 .TP
-.BI :s " #channel/user"
+.BI /s " #channel/user"
 Set default channel or user
 .TP
-.BI : command
+.BI / command
 Any line beginning with
-.B :
+.B /
 is sent as a command
