Update dmenu to version 5.0 and update patches
First, the old directory was deleted and a fresh git clone from suckless
was downloaded. Then, I manually modified config.mk to make 'make'
install locally.

Then, I downloaded the most recent version of the three patches that I
use, which were listed in PATCHES.txt, and applied them. Failed hunks
were manually corrected. The format of PATCHES.txt was changed from
listing the names of the patches to linking to their location on
suckless.org.

Additionally, information on the "-bw" option were added to dmenu.1 and
the usage() function. I also manually re-added the option "-bw 5" to
dmenu_run. TODO: Submit a patch to the border patch with the additions I
made to dmenu.1 and usage(), like the xyw patch has.

An old definition of FC_COLOR I added back in April was removed when I
downloaded the fresh Git repo, and no errors seem to have come about from
not manually re-adding it. Thus, it stays gone.

--- a/suckless/dmenu/dmenu.1
+++ b/suckless/dmenu/dmenu.1
@@ -4,10 +4,18 @@ dmenu \- dynamic menu
 .SH SYNOPSIS
 .B dmenu
 .RB [ \-bfiv ]
+.RB [ \-bw
+.IR width ]
 .RB [ \-l
 .IR lines ]
 .RB [ \-m
 .IR monitor ]
+.RB [ \-x
+.IR xoffset ]
+.RB [ \-y
+.IR yoffset ]
+.RB [ \-z
+.IR width ]
 .RB [ \-p
 .IR prompt ]
 .RB [ \-fn
@@ -40,6 +48,9 @@ which lists programs in the user's $PATH and runs the result in their $SHELL.
 .B \-b
 dmenu appears at the bottom of the screen.
 .TP
+.BI \-bw " width"
+sets the width of the border around the dmenu window.
+.TP
 .B \-c
 dmenu appears centered on the screen.
 .TP
@@ -52,6 +63,10 @@ dmenu matches menu items case insensitively.
 .TP
 .BI \-l " lines"
 dmenu lists items vertically, with the given number of lines.
+.TP
+.BI \-m " monitor"
+dmenu is displayed on the monitor number supplied. Monitor numbers are starting
+from 0.
 .TP
 .BI \-x " xoffset"
 dmenu is placed at this offset measured from the left side of the monitor.
@@ -68,15 +83,8 @@ If option
 .B \-m
 is present, the measurement will use the given monitor.
 .TP
-.BI \-w " width"
+.BI \-z " width"
 sets the width of the dmenu window.
-.TP
-.BI \-bw " width"
-sets the width of the border around the dmenu window.
-.TP
-.BI \-m " monitor"
-dmenu is displayed on the monitor number supplied. Monitor numbers are starting
-from 0.
 .TP
 .BI \-p " prompt"
 defines the prompt to be displayed to the left of the input field.
